force-app/main/default/objects/Tenant_Info__c/Tenant_Info__c.object-meta.xml
<CustomObject>
    <label>Tenant Info</label>
    <nameField>
        <displayFormat>TN-{00}</displayFormat>
        <label>Tenant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenant Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>