force-app/main/default/objects/Tenant_Info__c/fields/Agreement_From__c.field-meta.xml
<CustomField>
    <fullName>Agreement_From__c</fullName>
    <label>Agreement From</label>
    <type>Date</type>
</CustomField>