force-app/main/default/objects/Tenant_Info__c/fields/Agreement_Upto__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Upto__c</fullName>
    <label>Agreement Upto</label>
    <type>Date</type>
</CustomField>