force-app/main/default/objects/Tenant_Info__c/fields/Looking_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Looking_For_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Looking For Renewal</label>
    <type>Checkbox</type>
</CustomField>