force-app/main/default/objects/Tenant_Info__c/fields/Present_Leasee__c.field-meta.xml
<CustomField>
    <fullName>Present_Leasee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Present Leasee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tenant Info</relationshipLabel>
    <relationshipName>Tenant_Info</relationshipName>
    <type>Lookup</type>
</CustomField>