force-app/main/default/objects/Tenant_Info__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Tenant Info</relationshipLabel>
    <relationshipName>Tenant_Info</relationshipName>
    <type>Lookup</type>
</CustomField>