force-app/main/default/objects/Tenant_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Present_Leasee__c</columns>
    <columns>Unit__c</columns>
    <columns>Agreement_Upto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>